editing focused on chapter 4. Clarified statements of the fundamental multiplication rules.

--- a/preamble.sty
+++ b/preamble.sty
@@ -131,8 +131,14 @@
 \newcommand{\dblflags}{{\flags\!\times\!\flags}}
 \newcommand{\triflags}{{\flags\!\times\!\flags\!\times\!\flags}}
 
+% quantum integers
+\newcommand{\qint}[1]{[[#1]]}
+
 % compositions (of r into n parts)
 \newcommand{\compositions}{{\Lambda_0}}
+
+% elementary periodic matrices.
+\newcommand{\elem}[2]{\mathcal{E}_{#1,#2}}
 
 % periodic characteristic matrix of a pair.
 \newcommand{\type}[2]{\operatorname{A}(#1,#2)}
@@ -146,6 +152,9 @@
 
 % weight of the characteristic matrix
 \newcommand{\weight}{\operatorname{wt}}
+
+% orbits in double flag variety:
+\newcommand{\orbit}[1]{\mathcal{O}_{#1}}
 
 % PRODUCT(S) OF ORBITS
 \newcommand{\xprod}[2][]{X_{#2}^{#1}}
